--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     </head>
     <body>
         <h1>
-            BEM VINDO AO ACRE WEB!
+            Bem vindo ao WEB ACRE!
         </h1>
     </body>
 </html>
